--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "^5.82.1",
-    "webpack-cil": "^0.0.1-security"
+    "webpack-cil": "^0.0.1-security",
+    "webpack-cli": "^5.1.1"
   }
 }
